--- a/src/app/components/opcao/opcao.component.html
+++ b/src/app/components/opcao/opcao.component.html
@@ -227,8 +227,7 @@
 
           <mat-form-field appearance="outline" style="width: 100%">
             <mat-label>Reajuste</mat-label>
-            <mat-select (ngModelChange)="filtraOpcao()" [(ngModel)]="filtroOpcao.reajuste">
-              <mat-option [value]="null"></mat-option>
+            <mat-select (ngModelChange)="filtraOpcao()" [(ngModel)]="filtroOpcao.reajustes" multiple>
               <mat-option *ngFor="let reajuste of todosReajustes;" [value]="reajuste">{{reajuste}}</mat-option>
             </mat-select>
           </mat-form-field>
