WIP: auditoria.component.html

--- a/src/app/components/auditoria/auditoria.component.html
+++ b/src/app/components/auditoria/auditoria.component.html
@@ -1,1 +1,22 @@
-<p>auditoria works!</p>
+<div class="flex-container">
+  <div>
+    <mat-card>
+      <mat-card-title>
+        <span>
+          Auditoria
+        </span>
+      </mat-card-title>
+      <br/>
+
+      <mat-card-content>
+
+        <mat-tab-group mat-align-tabs="start">
+          <mat-tab label="Logins">Logins...</mat-tab>
+          <mat-tab label="Cotaçoes">Cotaçoes...</mat-tab>
+          <mat-tab label="Alteraçoes">Alteraçoes...</mat-tab>
+        </mat-tab-group>
+
+      </mat-card-content>
+    </mat-card>
+  </div>
+</div>
