--- a/src/app/components/usuario/usuario.component.html
+++ b/src/app/components/usuario/usuario.component.html
@@ -1,4 +1,4 @@
-<div class="flex-container" xmlns="http://www.w3.org/1999/html">
+<div class="flex-container">
   <div>
     <mat-card>
       <mat-card-title>
