--- a/src/app/components/auditoria/auditoria.component.html
+++ b/src/app/components/auditoria/auditoria.component.html
@@ -1,4 +1,4 @@
-<div class="flex-container">
+<div>
   <div>
     <mat-card>
       <mat-card-title>
@@ -11,9 +11,21 @@
       <mat-card-content>
 
         <mat-tab-group mat-align-tabs="start">
-          <mat-tab label="Logins">Logins...</mat-tab>
-          <mat-tab label="Cotaçoes">Cotaçoes...</mat-tab>
-          <mat-tab label="Alteraçoes">Alteraçoes...</mat-tab>
+          <mat-tab label="Logins">
+            <ng-template matTabContent>
+              <app-auditoria-login></app-auditoria-login>
+            </ng-template>
+          </mat-tab>
+          <mat-tab label="Cotaçoes">
+            <ng-template matTabContent>
+              <app-auditoria-cotacao></app-auditoria-cotacao>
+            </ng-template>
+          </mat-tab>
+          <mat-tab label="Alteraçoes">
+            <ng-template matTabContent>
+              <app-auditoria-alteracoes></app-auditoria-alteracoes>
+            </ng-template>
+          </mat-tab>
         </mat-tab-group>
 
       </mat-card-content>
