WIP validaçao usuario.component.ts

--- a/src/app/components/usuario/usuario.component.html
+++ b/src/app/components/usuario/usuario.component.html
@@ -75,18 +75,33 @@
           <mat-form-field appearance="outline" style="width: 100%">
             <mat-label>Nome</mat-label>
             <input matInput placeholder="Nome" [disabled]="!adicionandoUsuario() && !editandoUsuario()"
-                   [(ngModel)]="usuarioEditando.nome">
+                   [(ngModel)]="usuarioEditando.nome" type="text" #nome="ngModel" required>
           </mat-form-field>
           <mat-form-field appearance="outline" style="width: 100%">
             <mat-label>Email</mat-label>
             <input matInput placeholder="Email" [disabled]="!adicionandoUsuario() && !editandoUsuario()"
-                   [(ngModel)]="usuarioEditando.email">
+                   [(ngModel)]="usuarioEditando.email" type="email" #email="ngModel" required>
           </mat-form-field>
-          <mat-form-field appearance="outline" style="width: 100%" *ngIf="adicionandoUsuario()">
-            <mat-label>Senha</mat-label>
-            <input matInput placeholder="Senha" [(ngModel)]="usuarioEditando.password" type="password">
-          </mat-form-field>
+          <div [hidden]="!adicionandoUsuario() && !editandoUsuario()">
+            <mat-form-field appearance="outline" style="width: 100%">
+              <input matInput placeholder="Senha" [(ngModel)]="usuarioEditando.password" type="password" #senha="ngModel" required>
+              <mat-label>Senha</mat-label>
+            </mat-form-field>
+          </div>
         </mat-card-content>
+
+        <div *ngIf="isFormInvalido(nome, email, senha)" class="alert alert-danger">
+          <div *ngIf="nome?.errors?.required">
+            * Campo Nome obrigatorio.
+          </div>
+          <div *ngIf="email?.errors?.required">
+            * Campo Email obrigatorio.
+          </div>
+          <div *ngIf="(adicionandoUsuario() || editandoUsuario()) && senha?.errors?.required">
+            * Campo Senha obrigatorio.
+          </div>
+
+        </div>
       </mat-card>
     </div>
     <div *ngIf="usuarioSelecionado" style="height: 20px"></div>
