--- a/src/app/components/usuario/usuario.component.html
+++ b/src/app/components/usuario/usuario.component.html
@@ -72,23 +72,39 @@
         <br/>
 
         <mat-card-content>
-          <mat-form-field appearance="outline" style="width: 100%">
-            <mat-label>Nome</mat-label>
-            <input matInput placeholder="Nome" [disabled]="!adicionandoUsuario() && !editandoUsuario()"
-                   [(ngModel)]="usuarioEditando.nome" type="text" #nome="ngModel" required>
-          </mat-form-field>
-          <mat-form-field appearance="outline" style="width: 100%">
-            <mat-label>Email</mat-label>
-            <input matInput placeholder="Email" [disabled]="!adicionandoUsuario() && !editandoUsuario()"
-                   [(ngModel)]="usuarioEditando.email" type="email" #email="ngModel" required>
-          </mat-form-field>
-          <div [hidden]="!adicionandoUsuario() && !editandoUsuario()">
-            <mat-form-field appearance="outline" style="width: 100%">
-              <input matInput placeholder="Senha" [(ngModel)]="usuarioEditando.password" type="password" #senha="ngModel" required>
-              <mat-label>Senha</mat-label>
-            </mat-form-field>
-          </div>
+          <form #usuarioForm="ngForm" (submit)="onSubmit()">
+            <div ngModelGroup="usuarioFormGroup" #usuarioFormGroup="ngModelGroup">
+              <mat-form-field appearance="outline" style="width: 100%">
+                <mat-label>Nome</mat-label>
+                <input matInput placeholder="Nome" [disabled]="!adicionandoUsuario() && !editandoUsuario()"
+                       [(ngModel)]="usuarioEditando.nome" name="nome" type="text" #nome="ngModel" required>
+              </mat-form-field>
+              <mat-form-field appearance="outline" style="width: 100%">
+                <mat-label>Email</mat-label>
+                <input matInput placeholder="Email" [disabled]="!adicionandoUsuario() && !editandoUsuario()"
+                       [(ngModel)]="usuarioEditando.email" name="email" type="email" #email="ngModel" required>
+              </mat-form-field>
+              <div [hidden]="!adicionandoUsuario() && !editandoUsuario()">
+                <mat-form-field appearance="outline" style="width: 100%">
+                  <input matInput placeholder="Senha" [(ngModel)]="usuarioEditando.password" name="senha" type="password" #senha="ngModel" required>
+                  <mat-label>Senha</mat-label>
+                </mat-form-field>
+              </div>
+            </div>
+            <button type="submit" hidden></button>
+          </form>
         </mat-card-content>
+
+        Dirty: {{nome.dirty}}
+        Touched: {{nome.touched}}
+        Dirty: {{email.dirty}}
+        Touched: {{email.touched}}
+        Dirty: {{senha.dirty}}
+        Touched: {{senha.touched}}
+
+        {{usuarioForm.valid}}
+
+        {{usuarioFormGroup.valid}}
 
         <div *ngIf="isFormInvalido(nome, email, senha)" class="alert alert-danger">
           <div *ngIf="nome?.errors?.required">
