Validaçao operadora.component.html

--- a/src/app/components/operadora/operadora.component.html
+++ b/src/app/components/operadora/operadora.component.html
@@ -72,17 +72,20 @@
         <br/>
 
         <mat-card-content>
-          <mat-form-field appearance="outline" style="width: 100%">
-            <mat-label>Nome</mat-label>
-            <input matInput placeholder="Nome" [disabled]="!adicionandoOperadora() && !editandoOperadora()"
-                   [(ngModel)]="operadoraEditando.nome">
-          </mat-form-field>
-          <mat-form-field appearance="outline" style="width: 100%">
-            <mat-label>Cor</mat-label>
-            <input matInput placeholder="Cor" [(ngModel)]="operadoraEditando.cor" [(colorPicker)]="operadoraEditando.cor"
-                   [disabled]="!adicionandoOperadora() && !editandoOperadora()"
-                   [style.color]="operadoraEditando.cor"/>
-          </mat-form-field>
+          <form #operadoraForm="ngForm" (submit)="onSubmit()">
+            <mat-form-field appearance="outline" style="width: 100%">
+              <mat-label>Nome</mat-label>
+              <input matInput placeholder="Nome" name="nome" [disabled]="!adicionandoOperadora() && !editandoOperadora()"
+                     [(ngModel)]="operadoraEditando.nome" required>
+            </mat-form-field>
+            <mat-form-field appearance="outline" style="width: 100%">
+              <mat-label>Cor</mat-label>
+              <input matInput placeholder="Cor" name="cor" [(ngModel)]="operadoraEditando.cor" [(colorPicker)]="operadoraEditando.cor"
+                     [disabled]="!adicionandoOperadora() && !editandoOperadora()"
+                     [style.color]="operadoraEditando.cor"/>
+            </mat-form-field>
+            <button type="submit" hidden></button>
+          </form>
         </mat-card-content>
       </mat-card>
     </div>
