--- a/src/app/components/laboratorio/laboratorio.component.html
+++ b/src/app/components/laboratorio/laboratorio.component.html
@@ -72,16 +72,19 @@
         <br/>
 
         <mat-card-content>
-          <mat-form-field appearance="outline" style="width: 100%">
-            <mat-label>Nome</mat-label>
-            <input matInput placeholder="Nome" [disabled]="!adicionandoLaboratorio() && !editandoLaboratorio()"
-                   [(ngModel)]="laboratorioEditando.nome">
-          </mat-form-field>
-          <mat-form-field appearance="outline" style="width: 100%">
-            <mat-label>Local</mat-label>
-            <input matInput placeholder="Nome" [disabled]="!adicionandoLaboratorio() && !editandoLaboratorio()"
-                   [(ngModel)]="laboratorioEditando.local">
-          </mat-form-field>
+          <form #formLaboratorio="ngForm" (submit)="onSubmit()">
+            <mat-form-field appearance="outline" style="width: 100%">
+              <mat-label>Nome</mat-label>
+              <input matInput placeholder="Nome" name="nome" [disabled]="!adicionandoLaboratorio() && !editandoLaboratorio()"
+                     [(ngModel)]="laboratorioEditando.nome" required>
+            </mat-form-field>
+            <mat-form-field appearance="outline" style="width: 100%">
+              <mat-label>Local</mat-label>
+              <input matInput placeholder="Local" name="local" [disabled]="!adicionandoLaboratorio() && !editandoLaboratorio()"
+                     [(ngModel)]="laboratorioEditando.local">
+            </mat-form-field>
+            <button type="submit" hidden></button>
+          </form>
         </mat-card-content>
       </mat-card>
     </div>
